# Optics_hackathon

./: .gitignore  .gitmodules  CMakeLists.txt  bayes.py  best_attempt.py  calc_parse_loss.py  check_os.py  final_metropolis.py  main.cpp  metropolis.py  metropolis_test.py  new_try.roa  test30.roa
contrib/: CMakeLists.txt  requirements.txt
optical_models/: ideal.roa
